[metadata]
name = repo-template
version = 0.1.0
description = Provide something to copy when I start projects
long_description = file: README.rst
url = https://github.com/zohassadar/repo-template
author = Richard Dodson
author_email = zohassadar@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    regex >= 2022.3.2
    PyYAML >= 6.0
    netmiko
    pysnmp
    easysnmp
python_requires = >=3.10


[options.packages.find]
exclude =
    tests*
    _*


[options.package_data]
* = *.yaml


[options.entry_points]
console_scripts =
    project = project.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
