[metadata]
name = netdisc
version = 0.1.0
description = Network discovery with python
long_description = file: README.rst
url = https://github.com/zohassadar/netdisc
author = Richard Dodson
author_email = zohassadar@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    regex >= 2022.3.2
    PyYAML >= 6.0
    netmiko
    pysnmp
    requests
    easysnmp
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    _*

[options.package_data]
* = *.yaml, *.textfsm, index

[options.entry_points]
console_scripts =
    netdisc = netdisc.start:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit =
    *netdisc/snmp/pymibs*
    *netdisc/snmp/asn1mibs*
